--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
         html,
         body {
             height: 100%;
-            overflow: hidden;
+            overflow-x: hidden;
         }
 
         body {
