--- a/index.html
+++ b/index.html
@@ -65,6 +65,7 @@
                     <span id="username-display"></span>
                 </div>
                 <div class="sidebar-header-actions">
+                    <button id="add-friend-btn" title="Add Friend"><i class="fa-solid fa-user-plus"></i></button>
                     <button id="settings-btn" title="Settings"><i class="fa-solid fa-gear"></i></button>
                     <button id="logout-btn" title="Logout"><i class="fa-solid fa-right-from-bracket"></i></button>
                 </div>
@@ -75,9 +76,6 @@
                     <input type="text" id="search-friends-input" placeholder="Search conversations..."
                         autocomplete="off">
                 </div>
-            </div>
-            <div class="sidebar-actions">
-                <button id="add-friend-btn"><i class="fa-solid fa-user-plus"></i> Friend</button>
             </div>
             <nav id="friends-list"></nav>
         </aside>
@@ -216,10 +214,6 @@
                         <span class="info-label">Member Since</span>
                         <span class="info-value" id="profile-joined-date"></span>
                     </div>
-                </div>
-                <div class="profile-actions">
-                    <button id="message-user-btn"><i class="fa-solid fa-message"></i> Message</button>
-                    <button id="call-user-btn"><i class="fa-solid fa-video"></i> Call</button>
                 </div>
             </div>
 
