--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <meta name="twitter:description" content="Peer 2 Peer - Secure, decentralized, real-time communication.">
     <meta name="twitter:image" content="/images/banner.png">
 
-    <meta name="apple-mobile-web-app-capable" content="yes">
+    <meta name="mobile-web-app-capable" content="yes">
     <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
     <meta name="format-detection" content="telephone=no">
 
@@ -22,6 +22,8 @@
     <link rel="icon" href="/images/icon.png">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css" rel="stylesheet">
     <link rel="stylesheet" href="/styling/index.css">
+
+    <link rel="manifest" href="/manifest.json">
 </head>
 
 <body>
