--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <meta name="twitter:image" content="/images/banner.png">
 
     <meta name="mobile-web-app-capable" content="yes">
-    <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
+    <meta name="apple-mobile-web-app-status-bar-style" content="black">
     <meta name="format-detection" content="telephone=no">
 
     <meta name="theme-color" content="#000000" media="(prefers-color-scheme: dark)">
