--- a/index.html
+++ b/index.html
@@ -233,11 +233,11 @@
                 </div>
                 <div class="profile-info">
                     <div class="info-item">
-                        <span class="info-label">Username</span>
+                        <span class="info-label">Username: </span>
                         <span class="info-value" id="profile-username-value"></span>
                     </div>
                     <div class="info-item">
-                        <span class="info-label">Member Since</span>
+                        <span class="info-label">Member Since: </span>
                         <span class="info-value" id="profile-joined-date"></span>
                     </div>
                 </div>
