--- a/index.html
+++ b/index.html
@@ -199,7 +199,7 @@
                 <div class="bottom-overlay">
                     <img src="public/images/icon.png" alt="Logo" class="overlay-logo">
                     Join Our Discord
-                    <a href="https://discord.com/invite/YOUR_INVITE_CODE" target="_blank">
+                    <a href="https://discord.com/invite/94KwX2ZtzK" target="_blank">
                         <button class="overlay-button"><i class="fa-solid fa-arrow-right"></i></button>
                     </a>
                 </div>
