--- a/index.html
+++ b/index.html
@@ -54,9 +54,6 @@
                         <label for="login-password">Password</label>
                         <input type="password" id="login-password" required autocomplete="current-password">
                     </div>
-                    <input type="text" name="website" class="hp-field" tabindex="-1" autocomplete="off">
-                    <input type="email" name="email_confirm" class="hp-field" tabindex="-1" autocomplete="off">
-                    <input type="hidden" id="signup-timestamp" value="">
                     <button type="submit">Login</button>
                     <p class="auth-switch">Don't have an account? <a href="#" id="show-signup">Sign Up</a></p>
                 </form>
@@ -115,7 +112,6 @@
             </div>
         </footer>
     </div>
-
     <div id="main-app" class="hidden">
         <aside id="sidebar">
             <div class="sidebar-header">
@@ -197,7 +193,7 @@
                 <div id="file-attachment-preview" class="file-attachment-preview hidden"></div>
 
                 <div class="bottom-overlay">
-                    <img src="public/images/icon.png" alt="Logo" class="overlay-logo">
+                    <img src="/images/icon.png" alt="Logo" class="overlay-logo">
                     Join Our Discord
                     <a href="https://discord.com/invite/94KwX2ZtzK" target="_blank">
                         <button class="overlay-button"><i class="fa-solid fa-arrow-right"></i></button>
